<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gotway</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mainPage">Home</string>
    <string name="settingPage">Setting</string>
    <string name="aboutPage">About Us</string>
    <string name="exit_by_muilt_click">Click again to quit the app</string>
    <string name="exit_alert">Keep app running in the background?</string>
    <string name="exit_remember">Remember this choice</string>
    <string name="exit_hold">Keep connected</string>
    <string name="exit_totally">Quit completely</string>
    <string name="setMode">Mode Selecting</string>
    <string name="setModeExplode">Powerful Mode</string>
    <string name="setModeComfortable">Comfortable Mode</string>
    <string name="setModeSoft">Soft Mode</string>
    <string name="setWarning">Alarm Setting</string>
    <string name="setWarningFirst">Close First Alarm</string>
    <string name="setWarningSecond">Close Second Alarm</string>
    <string name="setWarningOpenAll">Open Alarm</string>
    <string name="setPaddleSpeed">Pedal Tilt-back Speed Setting</string>
    <string name="setPaddleSpeedA">16km/h</string>
    <string name="setPaddleSpeedS">17km/h</string>
    <string name="setPaddleSpeedD">18km/h</string>
    <string name="setPaddleSpeedF">19km/h</string>
    <string name="setPaddleSpeedG">20km/h</string>
    <string name="setPaddleSpeedH">21km/h</string>
    <string name="setPaddleSpeedJ">22km/h</string>
    <string name="setPaddleSpeedK">23km/h</string>
    <string name="setPaddleSpeedL">24km/h</string>
    <string name="setPaddleSpeedZ">25km/h</string>
    <string name="setPaddleSpeedCancel">Pedal Tilt-back Speed Setting</string>
    <string name="setCorrect">Horizontal Calibration</string>
    <string name="setCorrectStart">Horizontal Calibration</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_title">Select Device:</string>
    <string name="scanner_action_cancel">Close</string>
    <string name="scanner_subtitle__not_bonded">Available device:</string>
    <string name="scanner_empty">No device available</string>
    <string name="not_available">n/a</string>
    <string name="device_loss_link">Bluetooth is disconnected, reconnect automatically later</string>
    <string name="no_ble">Blue tooth4.0 not supported by phone</string>
    <string name="device_error">Device not supported</string>
    <string name="device_disConn">Disconnected</string>
    <string name="device_conn">Connected successfully</string>
    <string name="device_conning">Connecting…</string>
    <string name="cant_send_when_moving">Device is in running state, can not apply instructions</string>
    <string name="disconnect_alert">Device connected.Disconnect or not?</string>
    <string name="disconnect_sure">Disconnect</string>
    <string name="disconnect_cancel">Cancel</string>
    <string name="about_copyRight">CopyRight©2015GotWay</string>
    <string name="about_version">GotWay%s</string>

    <string name="notify_enable">onNotifyEnable()</string>
    <string name="activity_main_on_key_down">onKeyDown()</string>
    <string name="activity_ble_profile_write_data1">writeData()_1</string>
    <string name="activity_ble_profile_write_data2">writeData()_2</string>
</resources>
