<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/alert" android:padding="@dimen/activity_horizontal_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disconnect_alert" android:layout_centerHorizontal="true" style="?android:attr/buttonBarButtonStyle" />
    <View android:id="@id/divider" android:background="@color/settingFrgItemDriver" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/alert" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/divider">
        <Button android:id="@id/yes" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/disconnect_sure" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        <View android:background="@color/settingFrgItemDriver" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:id="@id/no" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/disconnect_cancel" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>